tests/NormalTests/paczka1/fuzzy1/40206055.err
Error in line 10: NhxECdun1 S851 25,64
Error in line 5: NhxECdun1 A589 53,6
Error in line 29: QCpFQid3uo S303 23,2
Error in line 31: ugCs S851 82,7
